# dnd-with-ai

./: GEMINI.md  README.md  backend.md  frontend.md
backend/: .envrc  DEVELOPER_LOG.md  main.py  pyproject.toml
backend/app/api/: games.py
backend/app/models/: schemas.py
backend/app/services/: game_manager.py
backend/app/websockets/: connection.py
backend/tests/: test_api.py  test_game_manager.py
frontend/: DEVELOPER_LOG.md  eslint.config.js  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: ChatWindow.tsx  MessageInput.tsx  PlayerList.tsx
frontend/src/hooks/: useGameSocket.ts
frontend/src/pages/: GameRoom.tsx  HomePage.tsx
frontend/src/types/: index.ts
