[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Vladimir Jancar",email = "jvladko@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.117.1,<0.118.0)",
    "uvicorn (>=0.36.0,<0.37.0)",
    "websockets (>=15.0.1,<16.0.0)",
    "pydantic (>=2.11.9,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"



[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
httpx = "^0.28.1"
yapf = "^0.43.0"
pytest-asyncio = "^1.2.0"
ruff = "^0.13.1"

